[package]
name = "adc-read-compiler-bug"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adc-read-compiler-bug"
test = false
bench = false

[dependencies]
avr-device = { version = "0.5.4", features = ["atmega164pa", "rt"] }
embedded-hal = "0.2.3"
mcp23017 = "1.1.0"
ufmt = "0.2.0"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "15080aa41e726bc720adf36ce0fc5a030390c822"
features = ["atmega164pa"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
